# Bedrock-AgentCore-with-LangChain-Demo

./: .gitignore  BEDROCK_AGENTS_WALKTHROUGH.md  README.md  pyproject.toml  requirements.txt
aws_base_agent/: .bedrock_agentcore.yaml  README.md  agent.py  invoke_deployed_agent.py  requirements.txt
aws_kb_gr_agent/: .bedrock_agentcore.yaml  .dockerignore  .env.example  Dockerfile  README.md  invoke_deployed_agent.py  kb_gr_agent.py  requirements.txt  test_kb_gr_memory.py
bedrock-agents-integrations/: design.md  requirements.md  tasks.md
deployed/: README.md  agent.py  agent_with_all_features.py  requirements.txt
docs/: AWS_PERMISSIONS.md  BEDROCK_AGENTS_WALKTHROUGH.md
example_knowledge_base/: company_overview.txt  products_services.txt
knowledge_base/: contact_support.txt  policies_faq.txt
local/: README.md  agent.py  agent_with_memory.py  fastapi_server.py
local_deploy_agent/: README.md  agent.py  agent_with_all_features.py  agent_with_memory.py  fastapi_server.py  requirements.txt
shared/: __init__.py  config.py  guardrails.py  knowledge_base.py  memory.py  requirements.txt  retry.py
tests/: __init__.py  conftest.py  test_config.py  test_guardrails.py  test_knowledge_base.py  test_memory.py  test_retry.py
